# advent-of-code

./: .pre-commit-config.yaml  README.md  pyproject.toml
adventofcode/: utils.py
adventofcode/2021/day01/: solution.py
adventofcode/2021/day03/: solution.py
adventofcode/2021/day05/: solution.py
adventofcode/2021/day06/: solution.py
adventofcode/2021/day08/: solution.py
adventofcode/2021/day11/: solution.py
adventofcode/2021/day16/: solution.py
adventofcode/2022/day02/: solution.py
adventofcode/2022/day03/: solution.py
adventofcode/2022/day04/: solution.py
adventofcode/2022/day05/: solution.py
adventofcode/2022/day06/: solution.py
adventofcode/2022/day07/: solution.py
adventofcode/2022/day08/: solution.py
adventofcode/2022/day10/: solution.py
adventofcode/2022/day11/: solution.py
adventofcode/2022/day14/: solution.py
adventofcode/2022/day15/: solution.py
adventofcode/2022/day21/: solution.py
adventofcode/2022/day23/: solution.py
adventofcode/2023/day02/: solution.py
adventofcode/2023/day03/: solution.py
adventofcode/2023/day05/: solution.py
adventofcode/2023/day09/: solution.py
adventofcode/2023/day11/: solution.py
adventofcode/2023/day12/: solution.py
adventofcode/2023/day13/: solution.py
adventofcode/day02/: solution.py
adventofcode/day04/: solution.py
adventofcode/day07/: solution.py
adventofcode/day10/: solution.py
adventofcode/day11/: solution.py
adventofcode/day12/: solution.py
adventofcode/day14/: solution.py
adventofcode/day17/: solution.py
adventofcode/day21/: copy_solution.py  solution.py
(+30 files in other folders)
